privacyidea/static_new/src/styles/styles.scss
/* ... */
@font-face {
  font-family: "Roboto";
  src: url("fonts/Roboto-VariableFont_wdth,wght.ttf") format("truetype");
  font-weight: 100 900;
  font-style: normal;
}

@font-face {
  font-family: "Roboto";
  src: url("fonts/static/Roboto-Bold.ttf") format("truetype");
  font-weight: 700;
  font-style: normal;
}

:root {
  --overlay-margin: 297px;
  --blur: 4px;
  --border-radius: 4px;
  --light-distance: -4px;
  --shadow-distance: 2px;

  --double-global-padding: calc(var(--global-padding) * 2);
  --global-padding: 16px;
  --three-quarters-global-padding: calc(var(--global-padding) * 0.75);
  --half-global-padding: calc(var(--global-padding) / 2);
  --third-global-padding: calc(var(--global-padding) / 3);
  --quarter-global-padding: calc(var(--global-padding) / 4);
  --eighth-global-padding: calc(var(--global-padding) / 8);

  --global-gap: 16px;
  --half-global-gap: calc(var(--global-gap) / 2);

  --light: #f3f3f3;

  --green-brand-base: hsl(72, 100%, 32%);
  --green-brand-light: hsl(72, 100%, 37%);
  --background-green-brand: linear-gradient(145deg, var(--green-brand-light), var(--green-brand-base));

  --box-shadow: var(--shadow-distance) var(--shadow-distance) var(--blur) var(--mat-sys-shadow),
    var(--light-distance) var(--light-distance) var(--blur) var(--mat-sys-light);
  --box-shadow-white: var(--shadow-distance) var(--shadow-distance) var(--blur) var(--mat-sys-shadow),
  var(--light-distance) var(--light-distance) var(--blur) var(--mat-sys-light);
  --box-shadow-inset: inset var(--shadow-distance) var(--shadow-distance) var(--blur) var(--mat-sys-shadow),
  inset var(--light-distance) var(--light-distance) var(--blur) var(--mat-sys-light);

  --background-blue: linear-gradient(145deg, var(--mat-sys-primary-dark), var(--mat-sys-primary));
  --background-blue-inset: linear-gradient(145deg, var(--mat-sys-primary-light-active), var(--mat-sys-primary-light));
  --box-shadow-blue: inset var(--shadow-distance) var(--shadow-distance) var(--blur) var(--mat-sys-primary-light-active),
  inset var(--light-distance) var(--light-distance) var(--blur) var(--mat-sys-primary-dark);
  --box-shadow-blue-inset: inset var(--shadow-distance) var(--shadow-distance) var(--blur) var(--mat-sys-primary-dark),
  inset var(--light-distance) var(--light-distance) var(--blur) var(--mat-sys-primary-light-active);

  --background-green: linear-gradient(145deg, var(--green-base), var(--green-light));
  --background-green-inset: linear-gradient(145deg, var(--green-light), var(--green-base));
  --box-shadow-green: inset var(--shadow-distance) var(--shadow-distance) var(--blur) var(--green-light-active),
  inset var(--light-distance) var(--light-distance) var(--blur) var(--green-dark);
  --box-shadow-green-inset: inset var(--shadow-distance) var(--shadow-distance) var(--blur) var(--green-dark),
  inset var(--light-distance) var(--light-distance) var(--blur) var(--green-light-active);

  --background-red: linear-gradient(145deg, var(--red-base), var(--red-light));
  --background-red-inset: linear-gradient(145deg, var(--red-light), var(--red-base));
  --box-shadow-red: inset var(--shadow-distance) var(--shadow-distance) var(--blur) var(--red-light-active),
  inset var(--light-distance) var(--light-distance) var(--blur) var(--red-dark);
  --box-shadow-red-inset: inset var(--shadow-distance) var(--shadow-distance) var(--blur) var(--red-dark),
  inset var(--light-distance) var(--light-distance) var(--blur) var(--red-light-active);

  --background-yellow: linear-gradient(145deg, var(--yellow-base), var(--yellow-light));
  --background-yellow-inset: linear-gradient(145deg, var(--yellow-light), var(--yellow-base));

  --background-gray: linear-gradient(145deg, var(--grey-base), var(--grey-light));
  --background-gray-inset: linear-gradient(145deg, var(--grey-light), var(--grey-base));

  --box-shadow-gray: inset var(--shadow-distance) var(--shadow-distance) var(--blur) var(--grey-light-active),
  inset var(--light-distance) var(--light-distance) var(--blur) var(--grey-dark);
  --box-shadow-gray-inset: inset var(--shadow-distance) var(--shadow-distance) var(--blur) var(--grey-dark),
  inset var(--light-distance) var(--light-distance) var(--blur) var(--grey-light-active);

  --box-shadow-header: 4px 2px var(--blur) var(--mat-sys-shadow);
  --box-dialog-shadow: 0px 4px 20px var(--mat-sys-shadow-color-high);
  --table-color: var(--mat-sys-surface-container-lowest);

  --mdc-filled-text-field-container-color: var(surface-container-low);
  --mdc-tab-indicator-active-indicator-color: var(--mat-sys-primary);
  --mdc-filled-text-field-focus-active-indicator-color: var(--mat-sys-primary-light);
  --mat-tab-header-active-focus-indicator-color: var(--mat-sys-primary);
  --mat-tab-header-active-ripple-color: white;
  --mat-tab-header-inactive-ripple-color: white;
  --mat-select-focused-arrow-color: var(--mat-sys-primary-light);
  --mdc-outlined-text-field-focus-outline-color: var(--mat-sys-primary-light);
}

body.selfservice-layout {
  --overlay-margin: 256px;
}

.shadow {
  color: var(--mat-sys-shadow);
}

.on-surface {
  color: var(--mat-sys-on-surface);
}

.surface-highest {
  color: var(--mat-sys-surface-container-highest);
}

.bold {
  font-weight: bold;
}

.italic {
  font-style: italic;
}

.red {
  color: var(--red-base);
}

.red-light {
  color: var(--red-light);
}

.red-light-active {
  color: var(--red-light-active);
}

.green {
  color: var(--green-base);
}

.green-light {
  color: var(--green-light);
}

.green-light-active {
  color: var(--green-light-active);
}

.yellow {
  color: var(--yellow-base);
}

.yellow-light {
  color: var(--yellow-light);
}

.yellow-light-active {
  color: var(--yellow-light-active);
}

.blue-base {
  color: var(--mat-sys-primary);
}

.ali-center {
  align-items: center;
}

.ali-end {
  align-items: end;
}

.align-baseline {
  align-items: baseline;
}

.just-center {
  justify-content: center;
}

.just-end {
  justify-content: end;
}

.just-space-between {
  justify-content: space-between;
}
/* ... */

